populated fields with defaults

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 class="title">Drawrier</h1>
             <span id="upload" onclick="document.getElementById('file-input').click()">Upload file</span>
             <input id="file-input" type="file" name="name" style="display: none;" />
-            <span id="selected">Please upload a SVG file</span>
+            <span id="selected">Please upload an SVG file</span>
         </div>
         <div class="ui">
             <div class="settings" style="display: none;" >
